syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.baeldung.scala.akka_2.grpc";

package akka2grpc;

message MessageRequest {
  string id = 1;
  string message = 2;
  optional google.protobuf.Timestamp timestamp = 3;
  repeated string extra_info = 4;
}

message MessageResponse {
  string id = 1;
  string response_message = 2;
  optional google.protobuf.Timestamp timestamp = 3;
  repeated string extra_info = 4;
}

service MessageExchangeService {

  rpc SendMessage(MessageRequest) returns (MessageResponse) {}

  rpc StreamMessagesSingleResponse(stream MessageRequest) returns (MessageResponse) {}

  rpc SendMessageStreamResponse(MessageRequest) returns (stream MessageResponse) {}

  rpc StreamMessages(stream MessageRequest) returns (stream MessageResponse) {}
}